# Chinese-Llama-2-7b

./: .gitignore  Dockerfile  README.md  api.py  chinese-llama-2-7b-4bit.ipynb  chinese-llama-2-7b.ipynb  infer.py  openai_api.py  pyproject.toml  train.py
example/basic-chat/: app.py  model.py
ggml/: Dockerfile.ggml  convert_to_ggml.py
quantization/: convert.py
